# endlesscode-io

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: deploy.yml
docs/: ml_rating_predictor_plan.md  plan.md
scripts/: fetch_full.sh
scripts/rating-predictor/: apply.py  cli.py  predict.py  requirements.txt  setup.py
scripts/rating-predictor/core/: prompts.py  utils.py
src/: App.tsx  index.css
src/context/: ProgressContext.tsx  ReviewContext.tsx  SearchContext.tsx
src/data/: adapter.ts  filterTaxonomy.ts  galaxy.json  galaxy_full.json  mock.ts  schema.ts  tabs.ts  taxonomyLoader.ts  taxonomy_graph.json  taxonomy_graph_distilled_v1.json  taxonomy_graph_manual.json  taxonomy_graph_mastery_v1.json  taxonomy_graph_neetcode150.json  types.ts
src/pages/: TopicPage.tsx
src/types/: tabs.ts
src/utils/: csvExport.ts  gauntletGenerator.ts  spacedRepetition.ts  uuid.ts
tools/data-lab/: EXPERIMENTS.md  README.md  experiments.md  parser.py  pyproject.toml  run_parser.sh  train_model.py
tools/data-lab/.ipynb_checkpoints/: rating_predictor-checkpoint.ipynb
tools/data-lab/source/: description_translations.json  taxonomy_mapping.csv  translations.json  urls.json
tools/data-lab/source/raw_pages/: root.html
tools/data-lab/source/raw_pages/full-practice/: binary_search.html  bitwise.html  data_structures.html  math.html  sliding_window.html  strings.html
tools/data-lab/source/raw_pages/fundamentals/: linked_list.html  string.html
tools/galaxy-scraper/: package-lock.json  package.json
(+23 files in other folders)
